--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/add_post.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/add_post.html
@@ -1,7 +1,7 @@
 {% extends "pages/body.html" %}
 {% load i18n %}
 {% load fbc %}
-{% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/forum/">{% trans "Forum Index" %}</a>{% endblock %}
+{% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/forum/">{% trans "Forum Index" %}</a> > <a href="/forum/forum/{{ forum.id }}/">{{ forum.forum_name }}</a> > <a href="/forum/topic/{{ topic.topic_last_pagination_page }}/{{ topic.id }}/">{{ topic.topic_name }}</a>{% endblock %}
 {% block content %}
 <h2>{% trans "Add Post" %}</h2>
 <form method="post" action=".">
@@ -57,10 +57,8 @@
 </div>
 {% endif %}
 {% endblock %}
-{% block right %}{% if perms.is_authenticated %}<h4>{% trans "Options" %}</h4>
-<ul>
+{% block pagemenu %}{% if perms.is_authenticated %}
 <li><a href="/forum/lasttopics/">{% trans "Last Active Topics" %}</a></li>
 <li><a href="/forum/mytopics/">{% trans "My Topics" %}</a></li>
 <li><a href="/forum/myptopics/">{% trans "My Posts" %}</a></li>
-</ul>
 {% endif %}{% endblock %}
