--- a/trunk/diamandas/pages/templates/pages/news_list.html
+++ b/trunk/diamandas/pages/templates/pages/news_list.html
@@ -4,26 +4,31 @@
 {% block title %}{% trans "News" %}{% endblock %}
 {% block description %}{% trans "News" %}{% endblock %}
 {% block content %}
-<h2>{% if book %}{% trans "News" %}: {{ bk.title }}{% else %}{% trans "News" %}{% endif %}</h2>
-<ul>
-{% for t in object_list %}
-<li><a href="/w/p/{{ t.slug }}/" style="text-decoration:none;"><strong>{{ t.title }}</strong></a> - {{ t.date|date:"d.m.Y" }}</li>
-{% endfor %}
-</ul>
+{% if object_list %}
+	<h2>{% if book %}{% trans "News" %}: {{ bk.title }}{% else %}{% trans "News" %}{% endif %}</h2>
+	<ul>
+	{% for t in object_list %}
+	<li><a href="/w/p/{{ t.slug }}/" style="text-decoration:none;"><strong>{{ t.title }}</strong></a> - {{ t.date|date:"d.m.Y" }}</li>
+	{% endfor %}
+	</ul>
+{% else %}
+	<b>{% trans "There are no news." %}</b><br /><br />
+{% endif %}
 
-<div class="box" style="text-align:center;">
-{% if has_previous %}
-<h3><a href="/w/n/{% if book %}{{ book }}/{% endif %}?page={{ previous }}">{% trans "Previous Page" %}</a></h3>
+{% if has_previous or has_next %}
+	<div class="box" style="text-align:center;">
+	{% if has_previous %}
+		<h3><a href="/w/n/{% if book %}{{ book }}/{% endif %}?page={{ previous }}">{% trans "Previous Page" %}</a></h3>
+	{% endif %}
+	{% if has_next %}
+		<h3><a href="/w/n/{% if book %}{{ book }}/{% endif %}?page={{ next }}">{% trans "Next Page" %}</a></h3>
+	{% endif %}
+	</div>
 {% endif %}
-{% if has_next %}
-<h3><a href="/w/n/{% if book %}{{ book }}/{% endif %}?page={{ next }}">{% trans "Next Page" %}</a></h3>
-{% endif %}
-</div>
 {% endblock %}
 
-{% block right %}<h4>{% trans "Options" %}</h4>
-<ul>
+{% block pagemenu %}
+{% if book %}<li><a href="/w/p/{{ bk.slug }}/">{% trans "Go Back" %}</a></li>{% endif %}
 <li><a href="/">{% trans "Home" %}</a></li>
-</ul>
 {% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/w/n/">{% trans "News" %}</a>{% endblock %}
