--- a/trunk/diamandas/pages/templates/pages/show.html
+++ b/trunk/diamandas/pages/templates/pages/show.html
@@ -6,12 +6,10 @@
 {% block crumb %}{% ifequal page.content_type "book" %}<a href="/">{% trans "Home" %}</a> > {{ page.title }}{% else %}<a href="/">{% trans "Home" %}</a>{% if crumb %} > {{ crumb|safe }}{% endif %} > {{ page.title }}{% endifequal %}{% endblock %}
 
 {% block content %}{{ page.text|cbc|safe }}{% endblock %}
-{% block right %}
-<h4>{% trans "Options" %}</h4>
-<ul>
-	<li><a href="/com/{{ page.id }}/1/"><b>{% trans "Comments" %}</b> ({{ com }})</a></li>
-	{% if page.place %}<li><a href="/w/r/{{ page.place.slug }}/">{% trans "RSS Feed for" %} {{ page.place }}</a></li>{% endif %}
-	{% ifequal page.content_type "book" %}<li><a href="/w/r/{{ page.slug }}/">{% trans "RSS Feed for" %} {{ page.title }}</a></li>
-	<li><a href="/w/n/{{ page.slug }}/">{% trans "Browse book news" %}</a></li>{% else %}<li><a href="/w/n/">{% trans "Browse news" %}</a></li>{% endifequal %}
-	{% if user.is_staff %}<li><a href="/admin/pages/content/{{ page.id }}/">{% trans "Edit" %}</a></li>{% endif %}
-</ul>{% endblock %}
+{% block pagemenu %}
+<li><a href="/com/{{ page.id }}/1/"><b>{% trans "Comments" %}</b> ({{ com }})</a></li>
+{% if page.place %}<li><a href="/w/r/{{ page.place.slug }}/">{% trans "RSS Feed for" %} {{ page.place }}</a></li>{% endif %}
+{% ifequal page.content_type "book" %}<li><a href="/w/r/{{ page.slug }}/">{% trans "RSS Feed for" %} {{ page.title }}</a></li>
+<li><a href="/w/n/{{ page.slug }}/">{% trans "Browse book news" %}</a></li>{% else %}<li><a href="/w/n/">{% trans "Browse news" %}</a></li>{% endifequal %}
+{% if user.is_staff %}<li><a href="/admin/pages/content/{{ page.id }}/">{% trans "Edit" %}</a></li>{% endif %}
+{% endblock %}
