--- a/trunk/diamandas/pages/templates/pages/show_news.html
+++ b/trunk/diamandas/pages/templates/pages/show_news.html
@@ -6,10 +6,9 @@
 {% block crumb %}<a href="/">{% trans "Home" %}</a>{% if crumb %} > {{ crumb|safe }}{% endif %}{% endblock %}
 
 {% block content %}{{ page.description|cbc|safe }}<br /><br />{{ page.text|cbc|safe }}{% endblock %}
-{% block right %}<h4>{% trans "Options" %}</h4>
-<ul>
-	<li><a href="/com/{{ page.id }}/1/">{% trans "Comments" %} ({{ com }})</a></li>
-	<li><a href="/w/n/">{% trans "Browse news" %}</a></li>
-	{% if page.place %}<li><a href="/w/r/{{ page.place.slug }}/">{% trans "RSS Feed for" %} {{ page.place }}</a></li>{% endif %}
-	{% if user.staff %}<li><a href="/admin/pages/content/{{ page.id }}/">{% trans "Edit" %}</a></li>{% endif %}
-</ul>{% endblock %}
+{% block pagemenu %}
+<li><a href="/com/{{ page.id }}/1/">{% trans "Comments" %} ({{ com }})</a></li>
+<li><a href="/w/n/">{% trans "Browse news" %}</a></li>
+{% if page.place %}<li><a href="/w/r/{{ page.place.slug }}/">{% trans "RSS Feed for" %} {{ page.place }}</a></li>{% endif %}
+{% if user.staff %}<li><a href="/admin/pages/content/{{ page.id }}/">{% trans "Edit" %}</a></li>{% endif %}
+{% endblock %}
