--- a/trunk/site_media/layout/style.css
+++ b/trunk/site_media/layout/style.css
@@ -11,79 +11,6 @@ a
 {
 text-decoration:none;
 }
-/*  */
-#modernbricksmenu2{
-padding: 0;
-width: 100%;
-border-top: 5px solid #0C2432; /*Brown color theme*/ 
-background: transparent;
-overflow:auto;
-}
-
-#modernbricksmenu2 ul{
-margin:0;
-margin-left: 5px; /*margin between first menu item and left browser edge*/
-padding: 0;
-list-style: none;
-}
-
-#modernbricksmenu2 li{
-display: inline;
-margin: 0 2px 0 0;
-padding: 0;
-text-transform:uppercase;
-}
-
-#modernbricksmenu2 a{
-float: left;
-display: block;
-font: bold 11px Arial;
-color: white;
-text-decoration: none;
-margin: 0 1px 0 0; /*Margin between each menu item*/
-padding: 5px 10px;
-background-color: #000000; /*Brown color theme*/ 
-border-top: 1px solid white;
-}
-
-#modernbricksmenu2 a:hover{
-background-color: #0C2432; /*Brown color theme*/ 
-color: white;
-}
-
-#modernbricksmenu2 #current a{ /*currently selected tab*/
-background-color: #0C2432; /*Brown color theme*/ 
-color: white;
-border-color: #0C2432; /*Brown color theme*/ 
-}
-
-#myform{ /*CSS for sample search box. Remove if desired */
-float: right;
-margin: 0;
-margin-top: 3px;
-padding: 0;
-margin-right:5px;
-}
-
-#myform .textinput{
-width: 190px;
-border: 1px solid gray;
-background-color:#4993DC;
-color:white;
-font-size:11px;
-font-family:dejavu, verdana, tahoma, arial;
-}
-
-#myform .submit{
-color:white;
-height: 22px;
-border: 1px solid black;
-background-color: #4993DC;
-font-size:11px;
-font-family:dejavu, verdana, tahoma, arial;
-}
-
-/*  */
 
 ul, ol
 {
@@ -93,9 +20,14 @@ ul, ol
 }
 ol li { margin-left: 2.5em; }
 ul { padding-left: 2em; list-style-type: square; }
+
 #center
 {
-border:2px solid #3c78b5; background-color:#F6F6F6;margin:5px; margin-top:0px; float:left; width:75%; padding:15px;
+border:2px solid #3c78b5; background-color:#F6F6F6;margin:5px; margin-top:0px; padding:15px;
+/*padding-bottom:0px;*/
+margin-bottom:0px;
+padding-top:0px;
+border-top:1px #3c78b5 solid;
 text-align:justify;
 }
 #center a
@@ -104,24 +36,11 @@ color:#392F68;
 }
 .important
 {
-float:right; overflow:auto; margin-left:10px;
-}
-#right
-{
-margin:5px;color:white;overflow:auto;
-margin-top:0px;
-}
-#right a
-{
-color:#C3C3FF;
-/* font-weight:bold; */
-}
-#right h4
-{
-border-bottom:1px solid #4993DC;
-font-size:14px;
-font-weight:bold;
-margin:0px;
+float:right;
+margin-left:20px;
+margin-bottom:20px;
+/* width:170px; */
+/* border-left:1px solid #3c78b5; */
 }
 
 #top
@@ -140,7 +59,7 @@ color:white;
 {
 margin:5px; margin-bottom:10px; padding:0px;color:white;
 padding-top:14px;
-font-size:18px;
+font-size:16px;
 font-weight:bold;
 font-style: italic;
 margin-top:0px;
@@ -148,8 +67,7 @@ margin-top:0px;
 #topmenu
 {
 float:right;
-margin:10px;
-margin-top:0px;
+margin:15px;
 }
 #topmenu li
 {
@@ -160,10 +78,6 @@ padding-left:10px;
 {
 color:#C3C3FF;
 }
-#spinacz
-{
-margin-bottom:10px; overflow:auto;
-}
 
 #center h1
 {
@@ -171,6 +85,7 @@ border-bottom:3px solid #4993DC;
 font-size:20px;
 font-weight:bold;
 margin-bottom:5px;
+overflow:auto;
 }
 #center h2
 {
@@ -178,6 +93,7 @@ border-bottom:3px solid #4993DC;
 font-size:18px;
 font-weight:bold;
 margin-bottom:5px;
+overflow:auto;
 }
 #center h3
 {
@@ -185,6 +101,7 @@ border-bottom:3px solid #4993DC;
 font-size:16px;
 font-weight:bold;
 margin-bottom:5px;
+overflow:auto;
 }
 #center h4
 {
@@ -192,7 +109,10 @@ border-bottom:1px solid #4993DC;
 font-size:14px;
 font-weight:bold;
 margin-bottom:5px;
+overflow:auto;
 }
+
+
 p
 {
 margin-top:0px;
@@ -262,56 +182,6 @@ tr.rowB
 background: #D6D6D6;
 }
 
-.footer
-{
-text-align:center;
-color:white;
-}
-.footer a
-{
-color:white;
-font-weight:bold;
-}
-.footer li
-{
-display:inline;
-margin-right:10px;
-}
-
-
-#thumbBox{ /*Outermost DIV for thumbnail viewer*/
-position: absolute;
-left: 0;
-top: 0;
-width: auto;
-padding: 10px;
-padding-bottom: 0;
-background: #313131;
-visibility: hidden;
-z-index: 10;
-cursor: hand;
-cursor: pointer;
-}
-#thumbBox .footerbar{ /*Footer DIV of thumbbox that contains "close" link */
-font: bold 16px Tahoma;
-letter-spacing: 5px;
-line-height: 1.1em;
-color: white;
-padding: 5px 0;
-text-align: right;
-}
-#thumbBox #thumbImage{ /*DIV within thumbbox that holds the enlarged image */
-background-color: white;
-}
-#thumbLoading{ /*DIV for showing "loading" status while thumbbox is being generated*/
-position: absolute;
-visibility: hidden;
-border: 1px solid black;
-background-color: #EFEFEF;
-padding: 5px;
-z-index: 5;
-}
-
 .box
 {
 border:1px solid gray;
@@ -330,44 +200,44 @@ padding:5px;
 margin-bottom:35px;
 margin-top:5px;
 overflow:auto;
+background-color:#EFEFEF;
 }
 
 .newsbox li
 {
 display:inline;
 padding-right:10px;
-font-weight:bold;
 }
 
-#added
+.added
 {
 background-image:url(clock.gif);
 background-repeat:no-repeat;
 padding-left:20px;
 }
 
-#read
+.read
 {
 background-image:url(page.gif);
 background-repeat:no-repeat;
 padding-left:20px;
 }
 
-#comment
+.comment
 {
 background-image:url(comment.gif);
 background-repeat:no-repeat;
 padding-left:20px;
 }
 
-#book
+.book
 {
 background-image:url(folder.png);
 background-repeat:no-repeat;
 padding-left:20px;
 }
 
-#update
+.update
 {
 background-image:url(update.png);
 background-repeat:no-repeat;
@@ -408,7 +278,7 @@ border:0px !important;
 border:0px !important;
 }
 
-
+/* Tooltip */
 #dhtmlgoodies_tooltip{
 		background-color:#EEE;
 		border:1px solid #000;
@@ -417,7 +287,7 @@ border:0px !important;
 		z-index:20000;
 		padding:2px;
 		font-size:0.9em;
-		-moz-border-radius:6px;	/* Rounded edges in Firefox */
+		-moz-border-radius:6px;	
 		font-family: "Trebuchet MS", "Lucida Sans Unicode", Arial, sans-serif;
 		
 	}
@@ -430,5 +300,245 @@ border:0px !important;
 		filter:alpha(opacity=70);
 		-khtml-opacity: 0.7;
 		-moz-opacity: 0.7;
-		-moz-border-radius:6px;	/* Rounded edges in Firefox */
+		-moz-border-radius:6px;	
 	}
+
+/*Credits: Dynamic Drive CSS Library */
+/*URL: http://www.dynamicdrive.com/style/ */
+/* TOP BLACK MENU FOR BOOKS */
+#modernbricksmenu2{
+padding: 0;
+width: 100%;
+border-top: 5px solid #0C2432; /*Brown color theme*/ 
+background: transparent;
+/* overflow:auto; */
+margin:0px;
+}
+
+#modernbricksmenu2 ul{
+margin:0;
+margin-left: 5px; /*margin between first menu item and left browser edge*/
+padding: 0;
+list-style: none;
+}
+
+#modernbricksmenu2 li{
+display: inline;
+margin: 0 2px 0 0;
+padding: 0;
+text-transform:uppercase;
+}
+
+#modernbricksmenu2 a{
+float: left;
+display: block;
+font: bold 11px Arial;
+color: white;
+text-decoration: none;
+margin: 0 1px 0 0; /*Margin between each menu item*/
+padding: 5px 10px;
+background-color: #000000; /*Brown color theme*/ 
+border-top: 1px solid white;
+}
+
+#modernbricksmenu2 a:hover{
+background-color: #0C2432; /*Brown color theme*/ 
+color: white;
+}
+
+#modernbricksmenu2 #current a{ /*currently selected tab*/
+background-color: #0C2432; /*Brown color theme*/ 
+color: white;
+border-color: #0C2432; /*Brown color theme*/ 
+}
+
+#myform{ /*CSS for sample search box. Remove if desired */
+margin: 0;
+margin-top: 3px;
+padding: 0;
+margin-right:5px;
+display:inline;
+}
+
+#myform .textinput{
+width: 190px;
+border: 1px solid gray;
+background-color:#4993DC;
+color:white;
+font-size:11px;
+font-family:dejavu, verdana, tahoma, arial;
+}
+
+#myform .submit{
+color:white;
+height: 22px;
+border: 1px solid black;
+background-color: #4993DC;
+font-size:11px;
+font-family:dejavu, verdana, tahoma, arial;
+}
+
+/* TOP BLACK MENU FOR SITE LINKS */
+#modernbricksmenu{
+padding: 0;
+margin-top:15px;
+background: transparent;
+text-align:right;
+float:right;
+overflow:auto;
+}
+
+#modernbricksmenu ul{
+font: bold 11px Arial;
+margin:0;
+margin-left: 40px; /*margin between first menu item and left browser edge*/
+padding: 0;
+list-style: none;
+text-align:right;
+}
+
+#modernbricksmenu li{
+display: inline;
+margin: 0 2px 0 0;
+padding: 0;
+text-transform:uppercase;
+}
+
+#modernbricksmenu a{
+float: right;
+display: block;
+color: white;
+margin-right: 5px;
+padding: 5px 10px;
+text-decoration: none;
+letter-spacing: 1px;
+background-color: black; /*Default menu color*/
+}
+
+#modernbricksmenu a:hover{
+background-color: #0C2432; /*Menu hover bgcolor*/
+}
+
+#modernbricksmenuline{
+clear: both;
+padding: 0;
+height: 3px;
+line-height: 5px;
+background: #3c78b5; /*Brown color theme*/
+margin-left:5px;
+margin-right:5px;
+}
+
+/* DOWN BLACK MENU FOR FOOTER  */
+#modernbricksmenu3{
+padding: 0px;
+border-top: 2px solid #3c78b5; /*Brown color theme*/
+background: transparent;
+/* overflow:auto; */
+margin:0px;
+margin-left:5px;
+margin-right:5px;
+text-align:center;
+}
+
+#modernbricksmenu3 ul{
+margin:0;
+margin-right: 5px; /*margin between first menu item and left browser edge*/
+padding: 0;
+list-style: none;
+}
+
+#modernbricksmenu3 li{
+display: inline;
+margin: 0 2px 0 0;
+padding: 0;
+text-transform:uppercase;
+}
+
+#modernbricksmenu3 a{
+float: left;
+display: block;
+font: bold 11px Arial;
+color: white;
+text-decoration: none;
+margin: 0 1px 0 0; /*Margin between each menu item*/
+padding: 5px 10px;
+background-color: #000000; /*Brown color theme*/ 
+border-top: 1px solid white;
+}
+
+#modernbricksmenu3 a:hover{
+background-color: #0C2432; /*Brown color theme*/ 
+color: white;
+}
+
+/* CONTENT MENU FOR Content/wiki links  */
+.basictab{
+padding: 0;
+margin-left: 0;
+font: bold 12px Verdana;
+list-style-type: none;
+text-align: right;
+}
+
+.basictab li{
+display: inline;
+margin: 0;
+}
+
+.basictab li a{
+text-decoration: none;
+padding: 3px 7px;
+margin-left: 3px;
+border: 1px solid gray;
+border-top: none;
+background-color: white;
+color: black !important;
+}
+
+.basictab li a:visited{
+color: black;
+}
+
+.basictab li a:hover{
+background-color: #3c78b5;
+color: white !important;
+}
+
+.basictab li a:active{
+color: black;
+}
+
+/* Displaying Images */
+#thumbBox{ /*Outermost DIV for thumbnail viewer*/
+position: absolute;
+left: 0;
+top: 0;
+width: auto;
+padding: 10px;
+padding-bottom: 0;
+background: #313131;
+visibility: hidden;
+z-index: 10;
+cursor: hand;
+cursor: pointer;
+}
+#thumbBox .footerbar{ /*Footer DIV of thumbbox that contains "close" link */
+font: bold 16px Tahoma;
+letter-spacing: 5px;
+line-height: 1.1em;
+color: white;
+padding: 5px 0;
+text-align: right;
+}
+#thumbBox #thumbImage{ /*DIV within thumbbox that holds the enlarged image */
+background-color: white;
+}
+#thumbLoading{ /*DIV for showing "loading" status while thumbbox is being generated*/
+position: absolute;
+visibility: hidden;
+border: 1px solid black;
+background-color: #EFEFEF;
+padding: 5px;
+z-index: 5;
+}
