--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/category_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/category_list.html
@@ -2,11 +2,11 @@
 {% load i18n %}
 
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/forum/">{% trans "Forum Index" %}</a>{% endblock %}
-{% block pagemenu %}{% if perms.is_authenticated %}
+{% block pagemenu %}
 <li><a href="/forum/lasttopics/">{% trans "Last Active Topics" %}</a></li>
 <li><a href="/forum/mytopics/">{% trans "My Topics" %}</a></li>
 <li><a href="/forum/myptopics/">{% trans "My Posts" %}</a></li>
-{% endif %}{% endblock %}
+{% endblock %}
 
 {% block content %}
 {% for cat in categories %}
