--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/move_topic.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/move_topic.html
@@ -16,8 +16,8 @@
 <input type="submit" value="{% trans "Move Topic" %}" style="actiontable" />
 </form></div><br /></div>
 {% endblock %}
-{% block pagemenu %}{% if perms.is_authenticated %}
+{% block pagemenu %}
 <li><a href="/forum/lasttopics/">{% trans "Last Active Topics" %}</a></li>
 <li><a href="/forum/mytopics/">{% trans "My Topics" %}</a></li>
 <li><a href="/forum/myptopics/">{% trans "My Posts" %}</a></li>
-{% endif %}{% endblock %}
+{% endblock %}
