--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/topics_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/topics_list.html
@@ -4,11 +4,11 @@
 {% block title %}{% trans "Topics from" %} "{{ forum_name }}"{% endblock %}
 {% block header %}{% trans "Topics from" %} "{{ forum_name }}"{% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/forum/">{% trans "Forum Index" %}</a> > <a href="/forum/forum/{{ forum }}/">{{ forum_name }}</a>{% endblock %}
-{% block pagemenu %}{% if perms.is_authenticated %}
+{% block pagemenu %}
 <li><a href="/forum/add_topic/{{ forum }}/">{% trans "Add New Topic" %}</a></li>
 <li><a href="/forum/lasttopics/">{% trans "Last Active Topics" %}</a></li>
 <li><a href="/forum/mytopics/">{% trans "My Topics" %}</a></li>
-<li><a href="/forum/myptopics/">{% trans "My Posts" %}</a></li>{% endif %}{% endblock %}
+<li><a href="/forum/myptopics/">{% trans "My Posts" %}</a></li>{% endblock %}
 
 {% block content %}
 <div class="content">
