--- a/trunk/diamandas/translator/templates/translator/tra_list.html
+++ b/trunk/diamandas/translator/templates/translator/tra_list.html
@@ -45,10 +45,7 @@
 </div></div><br />
 {% endblock %}
 
-{% block right %}<h4>{% trans "Options" %}</h4>
-<ul>
-<li><a href="/">{% trans "Main Page" %}</a></li>
+{% block pagemenu %}
 <li><a href="/tra/">{% trans "What are Translations ?" %}</a></li>
-</ul>
 {% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/tra/">{% trans "Translations" %}</a> > <a href="/tra/list/">{% trans "Translations List" %}</a>{% endblock %}
