--- a/trunk/diamandas/userpanel/templates/userpanel/panel.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/panel.html
@@ -3,16 +3,25 @@
 {% block content %}
 <br />
 <h2>{% trans "User Profile" %}</h2>
+{% if user.is_authenticated %}
 	<div class="box">
 	<ul>
-	<li><a href="/user/login/?log=out"><b>{% trans "Logout" %}</b></a></li>
-	<li><a href="/user/edit/"><b>{% trans "Messages Settings" %}</b></a></li>
+	<li><a href="/user/logout/"><b>{% trans "Logout" %}</b></a></li>
 	<li><a href="/user/password_change/"><b>{% trans "Change Password" %}</b></a></li>
 	</ul>
 	<ul>
-	<li><a href="/user/userlist/"><b>{% trans "User List" %}</b></a></li>
-	<li><a href="mailto:riklaunim@gmail.com"><b>{% trans "Contact Site Admin" %}</b></a></li>
+	<li><a href="mailto:{{ admin_mail }}"><b>{% trans "Contact Site Admin" %}</b></a></li>
 	</ul>
-</div>
+	</div>
+{% else %}
+	<div class="box">
+	<ul>
+	<li><a href="/user/login/"><b>{% trans "Login" %}</b></a></li>
+	<li><a href="/user/register/"><b>{% trans "Register" %}</b></a></li>
+	<li><a href="/user/password_reset/"><b>{% trans "Lost Password" %}</b></a></li>
+	<li><a href="mailto:{{ admin_mail }}"><b>{% trans "Contact Site Admin" %}</b></a></li>
+	</ul>
+	</div>
+{% endif %}
 {% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/user/">{% trans "User Panel" %}</a>{% endblock %}
