--- a/trunk/diamandas/userpanel/templates/userpanel/password_change.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/password_change.html
@@ -14,7 +14,7 @@
 <tr class="rowA"><td>{% trans "New Password again" %}:</td><td>{{ form.new_password2 }}</td></tr>
 </table>
 </div>
-<input type="submit" value="login" />
+<br /><div class="box"><br /><div style="text-align:center;"><input type="submit" value="{% trans "Change Password" %}"></div><br /></div>
 </form>
 
 {% endblock %}
