--- a/trunk/diamandas/userpanel/templates/userpanel/password_reset.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/password_reset.html
@@ -12,8 +12,7 @@
 <tr class="rowA"><td><label for="id_username">{% trans "Email used on registration" %}:</label></td><td>{{ form.email }}</td></tr>
 </table>
 </div>
-<input type="submit" value="login" />
-</form>
+<br /><div class="box"><br /><div style="text-align:center;"><input type="submit" value="{% trans "Reset Password" %}"></div><br /></div></form>
 
 {% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/user/">{% trans "User Panel" %}</a>{% endblock %}
