--- a/trunk/diamandas/userpanel/templates/userpanel/register.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/register.html
@@ -30,7 +30,7 @@
           </table>
 </div>
 
-<br /><div class="box"><br /><div style="text-align:center;"><input type="submit" value="{% trans "Register My" %}" class="actiontable"></div><br /></div>
+<br /><div class="box"><br /><div style="text-align:center;"><input type="submit" value="{% trans "Register My" %}"></div><br /></div>
 </form>
 {% endblock %}
 {% block meta %}<meta http-equiv="Pragma" content="no-cache" />{% endblock %}
