--- a/trunk/diamandas/userpanel/templates/userpanel/login.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/login.html
@@ -13,7 +13,7 @@
 <tr class="rowB"><td><label for="id_password">{% trans "Password" %}:</label></td><td>{{ form.password }}</td></tr>
 </table>
 </div>
-<input type="submit" value="login" />
+<br /><div class="box"><br /><div style="text-align:center;"><input type="submit" value="{% trans "Login" %}"></div><br /></div>
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
