--- a/trunk/diamandas/pages/templates/pages/body.html
+++ b/trunk/diamandas/pages/templates/pages/body.html
@@ -22,7 +22,7 @@
 	<ul>
 	<li><a style="color:yellow;">{% trans "Categories:" %}</a></li>
 	{% for b in books %}
-		<li{% ifequal b.slug current_book.slug %} id="current"{% endifequal %}><a href="/w/p/{{ b.slug }}/">{{ b.title }}</a></li>
+		<li{% ifequal b.slug current_book %} id="current"{% endifequal %}><a href="/w/p/{{ b.slug }}/">{{ b.title }}</a></li>
 	{% endfor %}
 	</ul>
 	</div>
