--- a/trunk/diamandas/pages/templates/pages/show.html
+++ b/trunk/diamandas/pages/templates/pages/show.html
@@ -1,23 +1,23 @@
 {% extends "pages/body.html" %}
-{% load i18n %}{% load cbc %}
+{% load i18n %}
 {% block header %}{{ page.title }}{% endblock %}
 {% block title %}{{ page.title }}{% endblock %}
 {% block description %}{{ page.description }}{% endblock %}
-{% block crumb %}{% ifequal page.content_type "book" %}<a href="/">{% trans "Home" %}</a> > {{ page.title }}{% else %}<a href="/">{% trans "Home" %}</a>{% if crumb %} > {{ crumb|safe }}{% endif %} > {{ page.title }}{% endifequal %}{% endblock %}
+{% block crumb %}<a href="/">{% trans "Home" %}</a>{% if page.crumb %} > {{ page.crumb|safe }}{% endif %}{% endblock %}
 
-{% block content %}{{ page.text|cbc|safe }}{% endblock %}
+{% block content %}{{ page.parsed_text|safe }}{% endblock %}
 {% block pagemenu %}
-<li><a href="/com/{{ page.id }}/1/"><b>{% trans "Comments" %}</b> ({{ com }})</a></li>
+<li><a href="/com/{{ page.id }}/1/"><b>{% trans "Comments" %}</b> ({{ page.comments_count }})</a></li>
 {% ifequal page.content_type "book" %}
 	<li><a href="/w/r/{{ page.slug }}/">{% trans "RSS Feed for" %} {{ page.title }}</a></li>
 	<li><a href="/w/n/{{ page.slug }}/">{% trans "Browse category news" %}</a></li>
 {% else %}
-	{% ifequal page.place.content_type "book" %}
-		<li><a href="/w/r/{{ page.place.slug }}/">{% trans "RSS Feed for" %} {{ page.place.title }}</a></li>
-		<li><a href="/w/n/{{ page.place.slug }}/">{% trans "Browse category news" %}</a></li>
+	{% if page.current_book %}
+		<li><a href="/w/r/{{ page.current_book }}/">{% trans "Category RSS Feed" %}</a></li>
+		<li><a href="/w/n/{{ page.current_book }}/">{% trans "Browse category news" %}</a></li>
 	{% else %}
 		<li><a href="/w/n/">{% trans "Browse news" %}</a></li>
-	{% endifequal %}
+	{% endif %}
 {% endifequal %}
 {% if user.is_staff %}<li><a href="/admin/pages/content/{{ page.id }}/">{% trans "Edit" %}</a></li>{% endif %}
 {% endblock %}
