--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/post_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/post_list.html
@@ -15,44 +15,45 @@
 {% endblock %}
 
 {% block content %}
-<div class="content">
-          <table>
-            <tr>
-              <th class="first"><strong>{% trans "Post" %}</strong></th>
-              <th width="20%"><strong>{% trans "Author" %}</strong></th>
-            </tr>
+
 	{% for i in object_list %}
-	<tr class="{% cycle rowA,rowB %}"> 
-	<td class="first" style="text-align:justify;">{{ i.post_text|fbc|safe|urlizetrunc:"60" }} ({{ i.post_date|date:"d.m.Y" }})<br />
-	{% if perms.add_post %}
-		{% if opened %}
-			<a href="/forum/add_post/{{ topic_id }}/{{ i.id }}/">{% trans "Reply with quote" %}</a> |
-		{% endif %}
-		{% endif %}
-		{% ifequal i.post_author current_user %}
-		{% if opened %}
-			{% ifnotequal i.post_author "AnonymousUser" %}
-				<a href="/forum/edit_post/{{ i.id }}/">{% trans "Edit this post" %}</a> |
-			{% endifnotequal %}
-		{% endif %} 
-		{% else %}
-		{% if perms.is_staff %}
-			<a href="/forum/edit_post/{{ i.id }}/">{% trans "Edit this post" %}</a> |
-		{% endif %}
-		{% endifequal %}
-		{% if perms.is_staff %}
-			<a href="/forum/delete_post/{{ i.id }}/{{ topic_id }}/" onclick="return confirm('{% trans "Delete This Post?" %}')">{% trans "Delete this post" %}</a>
-		{% endif %}
-	</td>
-	<td>
-		<div class="box">{{ i.post_author }} {% if perms.is_staff %}({{ i.post_ip }}){% endif %}</div>
-	</td>
-</tr>
+	<div class="post">
+		    <div class="posthead">{{ i.post_date|date:"d.m.Y" }}</div>
+		    <div class="leftpost">
+			      <strong>{{ i.post_author}}</strong>
+		    </div>
+		    <div class="rightpost">	
+			      {{ i.post_text|fbc|safe|urlizetrunc:"60" }}
+		    </div>
+		    <div class="leftbottompost">
+			      {% if perms.is_staff %}{{ i.post_ip }}{% endif %}
+		    </div>
+		    <div class="rightbottompost">
+			      {% if perms.add_post %}
+				      {% if opened %}
+					      <a href="/forum/add_post/{{ topic_id }}/{{ i.id }}/" class="quote">{% trans "Reply with quote" %}</a>
+				      {% endif %}
+			      {% endif %}
+			      {% ifequal i.post_author current_user %}
+				      {% if opened %}
+					      {% ifnotequal i.post_author "AnonymousUser" %}
+						      <a href="/forum/edit_post/{{ i.id }}/" class="edit">{% trans "Edit this post" %}</a>
+					      {% endifnotequal %}
+				      {% endif %} 
+			      {% else %}
+				      {% if perms.is_staff %}
+					      <a href="/forum/edit_post/{{ i.id }}/" class="edit">{% trans "Edit this post" %}</a>
+				      {% endif %}
+			      {% endifequal %}
+			      {% if perms.is_staff %}
+					<a href="/forum/delete_post/{{ i.id }}/{{ topic_id }}/" onclick="return confirm('{% trans "Delete This Post?" %}')" class="delete">{% trans "Delete this post" %}</a>
+			      {% endif %}
+		    </div>
+	</div>
+<br />
 {% endfor %}
-</table>
-</div>
 
-
+<br />
 	<div class="box">
 	{% if perms.add_post %}
 		{% if opened %}
